RRDTOOL NEWS
============


In this file I am noting the major changes to RRDtool
for details check the cvs ChangeLog

2004/01/20 Tobi Oetiker <tobi@oetiker.ch>
  Ripped out all foreign libraries and adapted
  Configure and Makefiles and accordingly.

2002/03/26 Peter Speck <speck@ruc.dk>
  Contribution of an svg output routine for the new gfx graphing part

2002/03/23 Alex van den Bogaerdt <alex@ergens.op.Het.Net>
  Several visible changes made to rrd_graph
  * Pie chart support workable
  * Elements that are not used do not take up space on the img
  * Hack for the missing rotated text (see --vertical-label)
  * Tiny boxes in front of labels now scale with the text

2002/01/15 Tobias Oetiker <tobi@oetiker.ch>
  The BIG graph update
  * Replace libgd with libart
  * Added freetype
  * Updated zlib and libpng
  * rrd_gfx.c intrduced as libart wrapper
  * LINE takes now a float as argument
  * RRDtool uses truetype for fonts
  * thanks to libart there is now full alpha transparenc
    and antialiasing.
  * the new option --font lets customize the font
    and size for various graph elements
  * Updated to -> libtool 1.4.2 automake 2.12 autoconf 2.52
  * new --zoom commandline option for zoom ans shrinking
  ---- Still missing is rotatet text for the yaxis description
  ---- Still missing is tab support in the text rendere
  ---- Still missing is autoconf support for a default truetype font

2001/07/26 Alex van den Bogaerdt <alex@ergens.op.Het.Net>
  Added TOTAL to the VDEF functions.

2001/07/19 Alex van den Bogaerdt <alex@ergens.op.Het.Net>
  VDEF support.  This is a variable containing one value
  and a time component.  This type of variable can hold
  the result of a function over a complete time series
  of data (DEF or CDEF) such as the maximum seen, and when.

2001/03/10 Jake Brutlag <jakeb@corp.webtv.net>
  Support for COMPUTE data sources (CDEF data sources). Removes the RPN
  parser and calculator from rrd_graph and puts then in a new file,