@@ -3,7 +3,11 @@ RRDTOOL NEWS
 
 
 In this file I am noting the major changes to RRDtool
-for details check the cvs ChangeLog
+for details check the svn ChangeLog
+
+2005/04/04 Tobi Oetiker <tobi@oetiker.ch>
+  After adding lots of patches and doing a
+  autotools update we are ready for 1.2rc1
 
 2004/01/20 Tobi Oetiker <tobi@oetiker.ch>
   Ripped out all foreign libraries and adapted
